tests/ui/ferrocene/compiler-arguments/upper_c_debuginfo/upper_c_debuginfo_space-empty.rs
//@ check-fail
//@ compile-flags: -C debuginfo
//~? ERROR codegen option

fn main() {}

// ferrocene-annotations: um_rustc_C_debuginfo
